# ProyectoRobotica_RoboEntrega

./: .gitattributes  .gitmodules  README.md  cambiosCSS.text
documentacion/: README.md
documentacion/Diseños web actualizados/: diseños web.rp
documentacion/Motor fisico/: Diagrama.fzz  sketch_may29a.ino
robot/: aqui ira el robot
robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot/log/: latest_build
robot/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
robot/src/nav2_system/: setup.py
robot/src/provide_map/: setup.py
robot/src/robo_entrega/: readme
robot/src/robo_entrega/robo_entrega/: CMakeLists.txt  package.xml
robot/src/robo_entrega/robo_entrega_qr_scanner/: package.xml  setup.py
robot/src/robo_entrega/robo_entrega_qr_scanner/robo_entrega_qr_scanner/: qr_code_scanner.py
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/install/: setup.bash
turtlebot3_ws/src/log/: latest_build
turtlebot3_ws/src/my_first_node/: package.xml
web/: AdminPage.html  Usuarios.html  admin.html  aqui ira la web  contacto.html  index.html  iniciarSesion.html  mapa.html  miRobot.html  registro.html  test.html
web/backend/: app.py  requirements.txt
web/backend/api/: api_documentos.py  api_entrega.py  api_iniciar_sesion.py  (+3 more)
web/css/: estilo-admin.css  estilo-comun.css  estilo-contacto.css  estilo-iniciarSesion.css  estilo-landing.css  estilo-mapa.css  estilo-miRobot.css  estilo-registro.css  estilo-usuarios.css
web/html/: Usuarios.html  contacto.html  index.html  iniciarSesion.html  mapa.html  miRobot.html  registro.html
web/js/: AdminPage.js  conectar_ros2.js  ejemplo  index_imagenes.js  iniciarSesion.js  mapa.js
(+837 files in other folders)
