<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>robo_entrega</name>
<version>0.0.0</version>
<description>Projecto de robotica: RoboEntrega</description>
<maintainer email="equipo1@gmail.com">equipo1</maintainer>
<license>TODO: License declaration</license>

<url type="website">http://XXXXXXX</url>
<url type="repository">https://github.com/XXXXXXX</url>
<url type="bugtracker">https://github.com/XXXXXX</url>
<author email="equipo1@gmail.com">equipo1</author>

<buildtool_depend>ament_cmake</buildtool_depend>
<exec_depend>robo_entrega_office_world</exec_depend>
<exec_depend>robo_entrega_nav2_system</exec_depend>
<exec_depend>robo_entrega_provide_map</exec_depend>
<exec_depend>robo_entrega_slam</exec_depend>
<exec_depend>robo_entrega_nav_to_pose</exec_depend>
<export>
<build_type>ament_cmake</build_type>
</export>
</package>