<?xml version="1.0"?>
<package format="3">
  <name>robo_entrega_qr_scanner</name>
  <version>0.0.1</version>
  <description>QR Code scanner ROS2 node for RoboEntrega project.</description>
  <maintainer email="your_email@example.com">Jordan D. Phillips Fonta</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>pyzbar</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
